# Sentinel

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PERFORMANCE_IMPROVEMENTS.md  README.md  SECURITY.md  alertmanager.yml  docker-compose.yml  prometheus.yml  run.bat  run.sh
.github/workflows/: ci.yml
benches/: blocklist.rs  dpi.rs  ransomware.rs
grafana-dashboards/: dashboards.yml
scripts/: setup_geoip.sh
src/: error.rs  lib.rs  logs.rs  main.rs
src/alerts/: mod.rs  rules.rs
src/anomaly/: bruteforce.rs  detector.rs  ml_detector.rs  mod.rs  portscan.rs  ransomware.rs
src/auth/: mod.rs
src/backup/: config_manager.rs  mod.rs  updater.rs
src/blocking/: blocklist.rs  client_manager.rs  dns_over_https.rs  dns_over_tls.rs  dns_rewrite.rs  dns_sinkhole.rs  firewall.rs  geoip.rs  mod.rs  parental.rs  updater.rs
src/db/: mod.rs
src/devices/: device.rs  manager.rs  mod.rs  oui.rs
src/history/: mod.rs
src/logs/: mod.rs
src/metrics/: mod.rs
src/network/: dhcp.rs  mod.rs  scanner.rs  vpn.rs
src/notifications/: mod.rs
src/sniffer/: capture.rs  dpi.rs  mod.rs  netflow.rs  packet.rs  pool.rs
src/stats/: mod.rs
src/threatintel/: mod.rs
src/utils/: backpressure.rs  lru_cache.rs  mod.rs  work_stealing.rs
src/web/: api.rs  api_routes.rs  auth.rs  mod.rs  routes.rs
templates/: alert-rules.html  alerts.html  backups.html  base.html  blocking.html  device-groups.html  devices.html  dns-queries.html  dns-rewrite.html  index.html  layout.html  login.html  logs.html  ml-baselines.html  notifications.html  packets.html  parental.html  settings.html  threat-intel.html  users.html
