[package]
name = "sentinel-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sentinel-RS Team <hello@sentinel-rs.io>"]
description = "High-performance Local Network Security Monitor"
license = "MIT"
repository = "https://github.com/sentinel-rs/sentinel-rs"
homepage = "https://sentinel-rs.io"
keywords = ["security", "network", "monitor", "packet-capture", "firewall"]
categories = ["network-programming", "security", "web-services"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time", "io-util", "signal"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "validate-request", "trace"] }
askama = "0.12"

pcap = "2"
etherparse = "0.19"

rusqlite = { version = "0.33", features = ["bundled"] }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
regex = "1"
async-stream = "0.3"
futures-util = "0.3"
futures = "0.3"
rayon = "1.10"
crossbeam-channel = "0.5"
ipnetwork = "0.20"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
base64 = "0.22"
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9"
url = "2"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = []
dev = ["tracing-subscriber/env-filter"]

[[bin]]
name = "sentinel-rs"
path = "src/main.rs"

[include]
include = ["templates/"]

[lib]
name = "sentinel_rs"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--no-defaults"]

[badges]
github-actions = { repository = "sentinel-rs/sentinel-rs" }