[package]
name = "sentinel-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sentinel-RS Team <hello@sentinel-rs.io>"]
description = "High-performance Local Network Security Monitor"
license = "MIT"
repository = "https://github.com/sentinel-rs/sentinel-rs"
homepage = "https://sentinel-rs.io"
keywords = ["security", "network", "monitor", "packet-capture", "firewall"]
categories = ["network-programming", "security", "web-services"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time", "io-util", "signal"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "validate-request", "trace", "compression-full"] }
askama = "0.12"

pcap = "2"
etherparse = "0.19"

rusqlite = { version = "0.33", features = ["bundled"] }
ahash = "0.7"
indexmap = "2"
dashmap = "5.5"
bloomfilter = "1"
bytes = "1.5"
rand = "0.8"
once_cell = "1.19"

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
regex = "1"
async-stream = "0.3"
futures-util = "0.3"
futures = "0.3"
rayon = "1.10"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
ipnetwork = "0.20"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
base64 = "0.22"
argon2 = "0.5"
jsonwebtoken = "9"
url = "2"
thiserror = "2"
glob = "0.3"
num_cpus = "1.16"
memmap2 = "0.5"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
rustls-native-certs = "0.7"
base64 = "0.22"

[features]
default = []
dev = ["tracing-subscriber/env-filter"]

[profile.bench]
debug = true

[[bin]]
name = "sentinel-rs"
path = "src/main.rs"

[lib]
name = "sentinel_rs"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--no-defaults"]

[badges]
github-actions = { repository = "sentinel-rs/sentinel-rs" }